reduce contact page text area width to 70% to prevent overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,7 +403,7 @@ input {
 
 textarea {
     min-height: 150px;
-    width: 100%;
+    width: 70%;
     padding: 1em;
 }
 
